# docs

./: .gitignore  .gitmodules  .html  404.html  CHANGES.md  CLAUDE.md  INTEGRATION.md  README.md  index.css  index.html  index.xml  package-lock.json  package.json  quartz.config.ts  quartz.layout.ts  sitemap.xml
.claude/: project.json
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: sync-and-deploy.yml
blog/: index.html
blog/2025/: index.html
blog/2025/11/: index.html  week-2025-46.html
config/: ignorelist-internal.json  ignorelist.json
content/: index.html  index.md
content/blog/: index.md
content/guides/: getting-started.html  getting-started.md  index.html  index.md  obsidian-usage.html  obsidian-usage.md  quartz-setup.html  quartz-setup.md
content/projects/: index.html  index.md
docs/: integration-guide.md
docs/content/guides/: index.md  (+2 more)
guides/: getting-started.html  index.html  obsidian-usage.html  private-docs-setup.html  public-vs-private-comparison.html  quartz-setup.html
projects/: index.html
projects/ardour-mcp/: CHANGELOG.html  CONTRIBUTING.html  LICENSE  README.html  REPOSITORY_INIT.html  claude.html  index.html  pyproject.toml
projects/ardour-mcp/docs/: ARCHITECTURE.html  DEVELOPMENT.html  OSC_API.html  ROADMAP.html  index.html
projects/ardour-mcp/src/ardour_mcp/: __init__.py  ardour_state.py  osc_bridge.py  server.py
projects/ardour-mcp/src/ardour_mcp/tools/: __init__.py  recording.py  session.py  tracks.py  transport.py
projects/ardour-mcp/tests/: __init__.py  conftest.py  test_osc_bridge.py  test_tracks.py  test_transport.py
projects/dgx-music/: CLAUDE.html  IMPLEMENTATION_SUMMARY.html  INTEGRATION_TEST_DELIVERABLE.html  INTEGRATION_TEST_SPECIFICATION.html  INTEGRATION_TEST_SUMMARY.html  Justfile  PROJECT_STATUS.html  README.html  Tiltfile  alembic.ini  index.html  pytest.ini  requirements.txt  test_db_init.py
projects/dgx-pixels/: CLAUDE.html  CONTRIBUTING.html  README.html  index.html  justfile
projects/dgx-spark-mcp/: DEVOPS-FILES-CREATED.txt  Dockerfile  HOW-TO-USE.html  JUSTFILE-REFERENCE.html  PROJECT-COMPLETION-SUMMARY.html  QUICKSTART.html  README.html  TEST-SUMMARY.html  TESTING.html  TYPESCRIPT-FIXES-STATUS.html  USAGE-GUIDE.html  WORKSTREAM-5-SUMMARY.html  WS3_COMPLETION_SUMMARY.html  WS3_FILES.txt  WS5-COMPLETION-REPORT.html  WS6-DEVOPS-COMPLETION-REPORT.html  WS6-TESTING-COMPLETE.html  eslint.config.js  fix-remaining.sh  index.html  jest.config.js  justfile  package.json  test-hardware.mjs  test-intelligence.js  tsconfig.build.json  tsconfig.json
projects/fsrs/: CLAUDE.html  README.html  index.html  init.sh  justfile
projects/grimware/: CLAUDE.html  README.html  index.html
projects/locust/: CLAUDE.html  CONTRIBUTING.html  README.html  index.html
projects/mop/: README.html  index.html
projects/obi-mcp/: CHANGELOG.html  CONTRIBUTING.html  README.html  index.html
projects/osai/: README.html  claude.html  index.html
projects/raibid-ci/: CLAUDE.html  IMPLEMENTATION_SUMMARY.html  ORCHESTRATOR.html  README.html  TILT.html  WORKSPACE.html  index.html
projects/raibid-cli/: Cargo.toml  README.html  SUMMARY.html  index.html  justfile
projects/raibid-cli/crates/raibid-core/: Cargo.toml
projects/raibid-cli/crates/raibid-core/src/: config.rs  error.rs  filter.rs  git.rs  github.rs  lib.rs  sync.rs  types.rs
projects/raibid-cli/docs/: architecture.html  getting-started.html  index.html  research-git-sync.html  research-raibid-labs-org.html  roadmap.html
projects/raibid-cli/scripts/: discover-repos.nu  sync-repos.nu  validate.nu
projects/raibid-cli/src/: main.rs
projects/sparky/: ANALYSIS_SUMMARY.html  DGXPIXELS_PATTERN_REFERENCES.html  DGX_PIXELS_ORCHESTRATION_PATTERNS.html  DGX_PIXELS_README.html  EXECUTIVE_SUMMARY.html  IMPLEMENTATION_PROPOSAL.html  PARALLEL_ISSUES.html  QUICKSTART_OSS.html  QUICK_START_GUIDE.html  README.html  RESEARCH_REPORT_DEV_AUTOMATION_2025.html  TOOLS_AND_LIBRARIES.html  index.html
projects/workspace/: CLAUDE.html  README.html  claude-org-config-complete-package.html  index.html
quartz/components/: VersionBadge.tsx  index.ts
scripts/: build-site.nu  discover-repos.nu  setup-internal-repo.nu  sync-submodules.nu  update-docs.nu
static/: contentIndex.json
tags/: 0000FF.html  1-5.html  1-8.html  100DaysOfCode.html  102-106.html  107-110.html  11-13.html  111-113.html  3-5.html  5-8.html  93-94.html  95-98.html  99-101.html  BuildInPublic.html  DGX.html  DevCommunity.html  DevWrapped2025.html  FF0000.html  MLOps.html  PIXELS-001.html  PIXELS-002.html  PIXELS-023.html  PIXELS-024.html  PIXELS-025.html  PIXELS-026.html  PIXELS-040.html  PIXELS-041.html  PIXELS-042.html  PIXELS-XXX.html  Performance.html  PixelAI.html  RFD.html  TBD.html  Table.html  architecture.html  beginner.html  best-practices.html  blog.html  claude-config-help.html  code-samples.html  (+45 more)
(+573 files in other folders)
