[package]
name = "raibid-core"
version = "0.1.0"
edition = "2021"
authors = ["raibid-labs"]
description = "Core library for raibid-cli"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raibid-labs/raibid-cli"

[dependencies]
# Git operations
git2 = { version = "0.18", features = ["https", "ssh"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.10"
tracing = "0.1"
dirs = "5.0"

# HTTP client for GitHub API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"
tokio-test = "0.4"
